external-crates/move/crates/move-compiler/tests/move_2024/matching/bad_guard_4.exp
warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/bad_guard_4.move:16:13
   │
16 │             x if ({*x = Option::Some(1); false}) => 1,
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04010]: cannot infer type
   ┌─ tests/move_2024/matching/bad_guard_4.move:16:13
   │
16 │             x if ({*x = Option::Some(1); false}) => 1,
   │             ^ Could not infer this type. Try adding an annotation

error[E04006]: invalid subtype
   ┌─ tests/move_2024/matching/bad_guard_4.move:16:21
   │
16 │             x if ({*x = Option::Some(1); false}) => 1,
   │             -       ^
   │             │       │
   │             │       Invalid mutation. Expected a mutable reference
   │             │       Expected: '&mut _'
   │             Given: '&_'

warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/bad_guard_4.move:18:13
   │
18 │             x => 10,
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04010]: cannot infer type
   ┌─ tests/move_2024/matching/bad_guard_4.move:18:13
   │
18 │             x => 10,
   │             ^ Could not infer this type. Try adding an annotation

